--- a/HTML/Sem1Project/style.css
+++ b/HTML/Sem1Project/style.css
@@ -251,16 +251,16 @@ li p{
     align-items: center;
     transition: all ease-in-out 0.2s;
 }
-
+/*
 .cardContent .cardBtn:hover{
     background-color: #2f8be0;
 }
-
+/*
 .cardContent .cardBtn .cardIcon{
     position: relative;
     top: 0px;
     left: 0px;
     width: 16px;
 }
-
+*/
 /* Banner CSS */
