--- a/HTML/Sem1Project/style.css
+++ b/HTML/Sem1Project/style.css
@@ -238,13 +238,26 @@ li p{
     opacity: 0.6;
 }
 
-.cardContent .cardBtn{
+.cardContent {
     position: absolute;
     right: 20px;
     padding: 10px;
     background-color: #ededed;
     width: 25px;
     height: 20px;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all ease-in-out 0.2s;
+}
+.cardBtn{
+    position: absolute;
+    right: 20px;
+    padding: 10px;
+    background-color: #ededed;
+    width: 25px;
+    height: 5px;
     border-radius: 6px;
     display: flex;
     justify-content: center;
